force-app/main/default/objects/Reading__c/Reading__c.object-meta.xml
<CustomObject>
    <label>Leitura</label>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Numero da Leitura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leituras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>