force-app/main/default/objects/Reading__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Estante de livros</relationshipLabel>
    <relationshipName>Bookshelf</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>