force-app/main/default/objects/Reading__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Livro</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Leituras</relationshipLabel>
    <relationshipName>Bookshelf</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>