force-app/main/default/objects/Reading__c/fields/ChapterReading__c.field-meta.xml
<CustomField>
    <fullName>ChapterReading__c</fullName>
    <label>Capitulo atual</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>