force-app/main/default/objects/Reading__c/fields/Quiz__c.field-meta.xml
<CustomField>
    <fullName>Quiz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionario</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Book__c</field>
            <operation>equals</operation>
            <valueField>Quiz__c.Book__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quiz__c</referenceTo>
    <relationshipLabel>Leituras</relationshipLabel>
    <relationshipName>Readings</relationshipName>
    <type>Lookup</type>
</CustomField>