force-app/main/default/objects/Reading__c/fields/QuizAnswered__c.field-meta.xml
<CustomField>
    <fullName>QuizAnswered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionário foi respondido?</label>
    <type>Checkbox</type>
</CustomField>