force-app/main/default/objects/Reading__c/fields/ReadingPercentage__c.field-meta.xml
<CustomField>
    <fullName>ReadingPercentage__c</fullName>
    <label>% de leitura</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>