force-app/main/default/objects/Reading__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotStarted</fullName>
                <default>true</default>
                <label>Não iniciado</label>
            </value>
            <value>
                <fullName>Reading</fullName>
                <label>Em leitura</label>
            </value>
            <value>
                <fullName>WaitingValidation</fullName>
                <label>Aguardando validação</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Completo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>